--- a/simplesocial/accounts/templates/accounts/login.html
+++ b/simplesocial/accounts/templates/accounts/login.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{%extends 'base.html'%}
+{%load bootstrap5%}
+{%block content%}
+<div class="container">
+    <h1>Log in</h1>
+    <form method="post">
+        {%csrf_token%}
+        {%bootstrap_form form%}
+        <input type="submit" class="btn btn-primary" value="Log in">
+    </form>
+</div>
+{%endblock%}
