--- a/simplesocial/accounts/templates/accounts/signup.html
+++ b/simplesocial/accounts/templates/accounts/signup.html
@@ -1,10 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{%extends 'base.html'%}
 
-</body>
-</html>
+{%load bootstrap5%}
+{%block content%}
+<div class="container">
+    <h1>Sign Up</h1>
+    <form method="post">
+        {%csrf_token%}
+        {%bootstrap_form form%}
+        <input type="submit" class="btn btn-primary" value="Sign Up">
+    </form>
+
+</div>
+{%endblock%}
