--- a/groups/templates/groups/group_list.html
+++ b/groups/templates/groups/group_list.html
@@ -1,10 +1,46 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{%extends "groups/group_base.html"%}
+{%block pregroup%}
+<div class="col-md-4">
+    <div class="content">
+        {%if user.is_authenticated%)
+        <h2>Weclome back!
+            <a href="{%url 'posts:for_user' username=user.username%}">
+                @{{user.username}}
+            </a></h2>
+        {%endif%}
+        <h2>Groups</h2>
+        <p>Welcome to the group page!</p>
+    </div>
+    {%if user.is_authenticated%)
+        <a href="{%url 'groups:create' %}" class="btn btn-md btn fill btn-warning">
+            <span class="fa fa-plus-sign">Create new group!</span>
+        </a>
+    {%endif%}
+</div>
+{%endblock%}
+{%block content%}
+<div class="col-md-8">
+    <div class="list-group">
+        {%for group in object_list%}
+        <a href="%url 'groups:single' slug=group.slug%">
+            <h3 class="title list-group-item-heading">{{group.name}}</h3>
+            <div class="list-group-item-text container-fluid">
+                {{group.description_html|save}}
+                <div class="row">
+                    <div class="col-md-4">
+                        <span class="badge">{{group.members.count}}</span>
+                        member{{group.members.count|pluralize}}
+                    </div>
+                    <div class="col-md-4">
+                        <span class="badge">
+                            {{group.posts.count}}
+                            post{{group.posts.count}}
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </a>
+        {%endfor%}
+    </div>
+</div>
+{%endblock%}
