--- a/posts/templates/posts/user_post_list.html
+++ b/posts/templates/posts/user_post_list.html
@@ -1,10 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{%extends 'posts/post_base.html'%}
+{%block prepost%}
+<div>
+    <h1>@{{post_user.username}}</h1>
+</div>
+{%endblock%}
+{%block post_content%}
+<div class="col-md-8">
+    {%for post in post_list%}
+    {%include 'posts/_post.html'%}
+    {%endfor%}
+</div>
 
-</body>
-</html>
+{%endblock%}
