--- a/simplesocial/groups/templates/groups/group_list.html
+++ b/simplesocial/groups/templates/groups/group_list.html
@@ -1,31 +1,33 @@
-{%extends "groups/group_base.html"%}
-{%block pregroup%}
+{%extends 'groups/group_base.html'%}
+
+{% block pregroup %}
 <div class="col-md-4">
     <div class="content">
-        {%if user.is_authenticated%)
-        <h2>Weclome back!
+        {% if user.is_authenticated %}
+		<h2>Welcome back!
             <a href="{%url 'posts:for_user' username=user.username%}">
                 @{{user.username}}
-            </a></h2>
+            </a>
+        </h2>
         {%endif%}
         <h2>Groups</h2>
         <p>Welcome to the group page!</p>
     </div>
-    {%if user.is_authenticated%)
+    {% if user.is_authenticated %}
         <a href="{%url 'groups:create' %}" class="btn btn-md btn fill btn-warning">
-            <span class="fa fa-plus-sign">Create new group!</span>
+            <span class="fa fa-plus">Create new group!</span>
         </a>
     {%endif%}
 </div>
 {%endblock%}
-{%block content%}
+{%block group_content%}
 <div class="col-md-8">
     <div class="list-group">
         {%for group in object_list%}
-        <a href="%url 'groups:single' slug=group.slug%">
+        <a href="{%url 'groups:single' slug=group.slug%}">
             <h3 class="title list-group-item-heading">{{group.name}}</h3>
             <div class="list-group-item-text container-fluid">
-                {{group.description_html|save}}
+                {{group.description_html|safe}}
                 <div class="row">
                     <div class="col-md-4">
                         <span class="badge">{{group.members.count}}</span>
@@ -34,7 +36,7 @@
                     <div class="col-md-4">
                         <span class="badge">
                             {{group.posts.count}}
-                            post{{group.posts.count}}
+                            post{{group.posts.count|pluralize}}
                         </span>
                     </div>
                 </div>
