--- a/simplesocial/templates/base.html
+++ b/simplesocial/templates/base.html
@@ -4,12 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Star Social</title>
+    <script src="https://kit.fontawesome.com/f4907c1f88.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-    <!--    fonts-->
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="{%static 'simplesocial/css/master.css'%}">
-
 </head>
 <body>
 <nav class="navbar mynav navbar-expand-lg bg-body-tertiary" role="navigation" id="navbar">
@@ -18,14 +17,14 @@
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           {%if user.is_authenticated %}
-              <li><a class="nav-item nav-link active" href="#">Post</a></li>
-              <li><a class="nav-item nav-link active" href="#">Groups</a></li>
-              <li><a class="nav-item nav-link active" href="#">Create Group</a></li>
+              <li><a class="nav-item nav-link active" href="{%url 'posts:create'%}">Post</a></li>
+              <li><a class="nav-item nav-link active" href="{%url 'groups:all'%}">Groups</a></li>
+              <li><a class="nav-item nav-link active" href="{%url 'groups:create'%}">Create Group</a></li>
               <li><a class="nav-item nav-link active" href="{% url 'accounts:logout'%}">Log out</a></li>
           {%else%}
-              <li><a class="nav-item nav-link active" href="#">Groups</a></li>
-              <li><a class="nav-item nav-link active" href="{%url 'accounts:login'%}">Log in</a></li>
-              <li><a class="nav-item nav-link active" href="{%url 'accounts:signup'%}">Sing up</a></li>
+              <li><a class="nav-item nav-link active" href="{%url 'groups:all'%}">Groups</a></li>
+              <li><a class="nav-item nav-link active fa fa-user-circle-o" href="{%url 'accounts:login'%}"></a></li>
+              <li><a class="nav-item nav-link active fa fa-address-card-o" href="{%url 'accounts:signup'%}">Sing up</a></li>
           {%endif%}
       </ul>
     </div>
