--- a/simplesocial/groups/templates/groups/group_form.html
+++ b/simplesocial/groups/templates/groups/group_form.html
@@ -5,7 +5,7 @@
 <form action="{%url 'groups:create'%}" method="post" id="groupForm">
     {%csrf_token%}
     {%bootstrap_form form%}
-    <input type="submit" class="btn btn-primery btn-large" value="Create group">
+    <input type="submit" class="btn btn-primary btn-large" value="Create group">
 </form>
 
 {%endblock%}
