--- a/simplesocial/groups/templates/groups/group_list.html
+++ b/simplesocial/groups/templates/groups/group_list.html
@@ -15,7 +15,8 @@
     </div>
     {% if user.is_authenticated %}
         <a href="{%url 'groups:create' %}" class="btn btn-md btn fill btn-warning">
-            <span class="fa fa-plus">Create new group!</span>
+            <span class="fa fa-plus"></span>
+            Create new group!
         </a>
     {%endif%}
 </div>
@@ -30,14 +31,14 @@
                 {{group.description_html|safe}}
                 <div class="row">
                     <div class="col-md-4">
-                        <span class="badge">{{group.members.count}}</span>
+                        <span class="badge bg-secondary">{{group.members.count}}</span>
                         member{{group.members.count|pluralize}}
                     </div>
                     <div class="col-md-4">
-                        <span class="badge">
-                            {{group.posts.count}}
+                        <span class="badge bg-secondary">
+                            {{group.posts.count}}</span>
                             post{{group.posts.count|pluralize}}
-                        </span>
+
                     </div>
                 </div>
             </div>
