--- a/simplesocial/posts/templates/posts/post_confirm_delete.html
+++ b/simplesocial/posts/templates/posts/post_confirm_delete.html
@@ -2,7 +2,7 @@
 {%block post_content%}
 <h3>Are you sure you want to delete this post</h3>
 <div class="posts">
-    {%include 'posts/_post.html' with post=object hide_delete = True %}
+    	{% include "posts/_post.html" with post=object hide_delete=True %}
 </div>
 <form method="post">
     {%csrf_token%}
@@ -10,3 +10,4 @@
     <a href="{%url 'posts:single' username=user.username pk=object.pk%}"
     class="btn btn-simple btn-large btn-default">Cancel</a>
 </form>
+{%endblock%}
