--- a/simplesocial/posts/templates/posts/post_list.html
+++ b/simplesocial/posts/templates/posts/post_list.html
@@ -1,15 +1,14 @@
 {%extends "posts/post_base.html"%}
 
-{%block pre_post_content%}
+{%block prepost%}
 <div class="col-md-4">
     {%if request.user.is_authenticated%}
     <div class="card card-with-shadow">
         <div class="content">
             <h5 class="title">Your groups</h5>
             <ul class="list-unstyled">
-                {%for member_group in get_user_group%}
-                    <li class="group li-with-bullet"><a href="{%url 'groups:single' slug=member_group.group.slug%}"></a></li>
-
+                {%for member_group in get_user_groups%}
+                    <li class="group li-with-bullet"><a href="{%url 'groups:single' slug=member_group.slug%}">{{member_group.group}}</a></li>
                 {%endfor%}
             </ul>
         </div>
@@ -19,21 +18,20 @@
         <div class="container">
             <h5 class="title">All groups</h5>
             <ul class="list-unstyled">
-                {% for other_group in get_other_group %}
-                <li class="group li-with-bullet">
-                    <a href="{%url 'groups:single' slug=other_group.slug %}"></a>
+                {% for other_group in get_other_groups %}
+                 <li class="group li-with-bullet">
+                    <a href="{%url 'groups:single' slug=other_group.slug %}">{{other_group}}</a>
                 </li>
                 {%endfor%}
             </ul>
-        </div>>
+        </div>
     </div>
 </div>
 {%endblock%}
-
 {%block post_content%}
 <div class="col-md-8">
-    {%for post in post_list%}
-        {%include 'posts/_post.html'%}
-    {%endfor}
+    {% for post in post_list %}
+       {%include 'posts/_post.html'%}
+    {%endfor%}
 </div>
 {%endblock%}
