--- a/simplesocial/templates/test.html
+++ b/simplesocial/templates/test.html
@@ -1,4 +1,5 @@
 {%extends 'base.html'%}
 {%block content%}
 <h1>You are now logged in</h1>
+<h2><a href="{% url 'groups:all'%}">Go to groups</a></h2>
 {%endblock%}
