--- a/simplesocial/templates/base.html
+++ b/simplesocial/templates/base.html
@@ -13,8 +13,11 @@
 <body>
 <nav class="navbar mynav navbar-expand-lg bg-body-tertiary" role="navigation" id="navbar">
   <div class="container-fluid">
-    <a class="navbar-brand me-auto mynav" href="{%url 'home' %}">Star Social</a>
-    <div class="collapse navbar-collapse">
+      <a class="navbar-brand me-auto mynav" href="{%url 'home' %}">Star Social</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           {%if user.is_authenticated %}
               <li><a class="nav-item nav-link active" href="{%url 'posts:create'%}">Create Post</a></li>
