--- a/simplesocial/templates/base.html
+++ b/simplesocial/templates/base.html
@@ -9,6 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="{%static 'simplesocial/css/master.css'%}">
+    <link rel="stylesheet" href="{%static 'css/master.css'%}">
 </head>
 <body>
 <nav class="navbar mynav navbar-expand-lg bg-body-tertiary" role="navigation" id="navbar">
@@ -38,5 +39,7 @@
     {% block content %}
     {% endblock %}
 </div>
+<canvas id="canvas"></canvas>
 </body>
+<script type="text/javascript" src="{%static 'simplesocial/js/master.js'%}"></script>
 </html>
